Cabal-Version:       2.2
Build-Type:          Simple

Name:                reindexed
Version:             0.0.1.0
Synopsis:            An experimental package for (Atkey-style) indexed monads
Description:         Nothing to see here (yet).
Homepage:            https://github.com/NicolasT/reindexed
Bug-Reports:         https://github.com/NicolasT/reindexed/issues

License:             Apache-2.0
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Copyright:           (c) 2022 Nicolas Trangez

Category:            Control
Stability:           alpha

Extra-Doc-Files:
  CHANGELOG.md

Tested-With:         GHC==8.10.5

Source-Repository head
  Type:                git
  Location:            https://github.com/NicolasT/reindexed.git
  Branch:              main

Common common-settings
  Default-Language:    Haskell2010
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -Wmissing-export-lists

Library
  Import:              common-settings
  Exposed-Modules:     MyLib
  Hs-Source-Dirs:      src
  Build-Depends:       base ^>=4.14.2.0

Test-Suite reindexed-test
  Import:              common-settings
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  Main-Is:             reindexed-test.hs
  Build-Depends:       reindexed
                     , base
